--- a/template.html
+++ b/template.html
@@ -11,11 +11,11 @@
 <script src="script.js"></script>
 </head>
 <body>
-
+  <div id="header"></div>
   <main class="responsive">
     holaaaa
   </main>
-
+  <div id="footer"></div>
   
  </body>
  <script type="module" src="main.js"></script>
