--- a/blog.html
+++ b/blog.html
@@ -3,7 +3,7 @@
   <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>Webgae</title>
+<title>Webgae Blog</title>
     <meta name="description" content="Creamos sitios web bonitos y modernos. Con las mejores herramientas y componentes Rápidos, seguros y optimizados para el SEO.">
 <meta name="keywords" content="experto wordpress, trabajos wordpres, Web Full-Stack">
   <link href="https://cdn.jsdelivr.net/npm/beercss@3.7.12/dist/cdn/beer.min.css" rel="stylesheet">
